--- a/Page2.html
+++ b/Page2.html
@@ -1,5 +1,6 @@
 <html>
     <body>
         <h1>A simple page2 or two</h1>
+        <p>this is beign changesd after first commit</p>
     </body>
 </html>
